# GDCC

./: CMakeLists.txt  COPYING  FindGMP.cmake  README
ACC/: CMakeLists.txt  DirectiveTBuf.cpp  Exp.cpp  IncludeDTBuf.cpp  IncludeDTBuf.hpp  PPTokenTBuf.cpp  PPTokenTBuf.hpp  Parse.cpp  Parse.hpp  ParseFile.cpp  PropDecl.cpp  Scope.hpp  main_acc.cpp
ACC/Parse/: DeclSpec.cpp  Declarator.cpp  Statement.cpp
AR/: CMakeLists.txt  Exception.cpp  Exception.hpp  Types.hpp
AR/Wad/: CMakeLists.txt  Lump.hpp  LumpInfo.hpp  Wad.cpp
AS/: CMakeLists.txt  LabelTBuf.cpp  LabelTBuf.hpp  Macro.cpp  Types.hpp
AS/Parse/: Arg.cpp  DJump.cpp  Declaration.cpp  Exp.cpp  Function.cpp  Space.cpp  Value.cpp
BC/: AddFunc.hpp  CMakeLists.txt  Info.cpp  Info.hpp
BC/DGE/: CMakeLists.txt  Info.cpp  Info.hpp  Types.hpp
BC/Info/: addFunc.cpp  chk.cpp  getWord.cpp  moveArg.cpp  put.cpp  trStmnt.cpp
BC/ZDACS/: CMakeLists.txt  Code.hpp  Info.cpp  Info.hpp  Module.hpp  Types.hpp
CC/: AsmGlyphTBuf.cpp  AsmGlyphTBuf.hpp  CMakeLists.txt  Exp.cpp  Factory.hpp  Parse.cpp  Parse.hpp  Statement.cpp  Type.hpp  Warning.hpp
CC/Exp/: Add.cpp  Arith.hpp  Assign.cpp  Assign.hpp  Bitwise.hpp  Call.cpp  Deref.cpp  Deref.hpp  Div.cpp  Func.hpp  GenSel.cpp  Init.cpp  Jmp.cpp  Jmp.hpp  Lit.cpp  Mem.cpp  Mem.hpp  Mod.cpp  Mul.cpp  Not.cpp  Not.hpp  Obj.hpp  Promote.cpp  Str.cpp  Sub.cpp
CC/Parse/: AddrDecl.cpp  AttrSpec.cpp  DeclSpec.cpp  Declarator.cpp  TypeQual.cpp  TypeSpec.cpp
CC/Scope/: Block.cpp  Break.cpp  Break.hpp  Case.cpp  Function.hpp  Global.cpp  Global.hpp  Local.cpp  Local.hpp
CC/Statement/: Asm.cpp  Asm.hpp  FuncPre.cpp  If.cpp  If.hpp  Loop.cpp  Return.hpp
CC/Type/: Bool.cpp  Bool.hpp  Char.cpp  Char.hpp  Enum.cpp  Enum.hpp  Fixed.cpp  Fixed.hpp  Float.cpp  Float.hpp  Struct.cpp  Struct.hpp
CPP/: CMakeLists.txt  ConditionDTBuf.hpp  DirectiveTBuf.cpp  DirectiveTBuf.hpp  IStream.hpp  IncludeDTBuf.cpp  IncludeDTBuf.hpp  Macro.cpp  Macro.hpp  MacroDTBuf.cpp  MacroTBuf.hpp  PPTokenTBuf.cpp  Pragma.cpp  Pragma.hpp  PragmaDTBuf.cpp  StringTBuf.cpp  StringTBuf.hpp  TSource.hpp  TStream.hpp  Types.hpp  Warning.cpp  Warning.hpp  main_cpp.cpp
Core/: Array.hpp  BinaryIO.hpp  BufferTBuf.hpp  CMakeLists.txt  CommentBuf.hpp  Compare.hpp  Counter.cpp  Dir.cpp  Dir.hpp  Exception.cpp  File.hpp  IntItr.hpp  LineTermBuf.hpp  MemCmp.hpp  MemItr.hpp  Number.cpp  Number.hpp  NumberAlloc.hpp  Option.cpp  Option.hpp  OriginBuf.hpp  ParseString.cpp  Path.cpp  Path.hpp  Range.hpp  String.cpp  String.hpp  StringBuf.hpp  StringList.hpp  StringOption.cpp  Token.cpp  TokenBuf.hpp  Types.hpp  WSpaceTBuf.hpp  Warning.cpp  Warning.hpp
IR/: Arg.cpp  Arg.hpp  Block.cpp  CMakeLists.txt  Code.cpp  Code.hpp  DJump.hpp  Exception.hpp  Function.cpp  Function.hpp  Glyph.cpp  IArchive.cpp  IArchive.hpp  Import.hpp  Linkage.cpp  Linkage.hpp  Object.cpp  Program.hpp  Space.cpp  Statement.cpp  Statement.hpp  Type.hpp  TypeList.hpp  Types.hpp  Value.cpp  Value.hpp
IR/Exp/: Branch.cpp  Branch.hpp  Glyph.cpp  Glyph.hpp  Multi.cpp  Multi.hpp  Unary.cpp  Value.hpp
IR/Value/: And.cpp  Cmp.cpp  Div.cpp  OrX.cpp  Sub.cpp
IRDump/: CMakeLists.txt  Put.cpp  Put.hpp  Types.hpp
IRDump/Put/: Exp.cpp  Function.cpp  Program.cpp  Value.cpp
LD/: CMakeLists.txt  Linker.cpp  main_ld.cpp
MakeLib/: CMakeLists.txt
NTSC/: CMakeLists.txt  ConcatTBuf.cpp  ConcatTBuf.hpp  IStream.cpp  PutToken.cpp  PutToken.hpp  TSource.cpp  TSource.hpp  TStream.hpp  Types.hpp  main_ntsc.cpp
Option/: Base.cpp  Base.hpp  CMakeLists.txt  CStrV.cpp  Exception.cpp  Exception.hpp  Int.hpp  IntMap.hpp  Program.cpp  StrUtil.hpp  Types.hpp
Option/Program/: Process.cpp  Put.cpp
SR/: Arg.cpp  Arg.hpp  Attribute.cpp  Attribute.hpp  CMakeLists.txt  Exp.cpp  Exp.hpp  ExpCode.hpp  Function.cpp  Function.hpp  Object.cpp  Object.hpp  Space.hpp  Statement.cpp  Statement.hpp  Temporary.hpp  Type.cpp  Types.hpp
SR/Exp/: Arg.cpp  Arg.hpp  Arith.cpp  Arith.hpp  Binary.hpp  Cmp.hpp  Cnd.hpp  Convert.cpp  Convert.hpp  Logical.cpp  MulSize.cpp  Unary.cpp  Unary.hpp
SR/GenStmnt/: ArithEq.cpp  Convert.cpp  Move.cpp  Move.hpp  Point.cpp
SR/Statement/: Empty.cpp  Empty.hpp  Exp.hpp  Multi.cpp
SR/Type/: Bitfield.hpp  Function.hpp  Pointer.cpp  Primary.cpp  Primary.hpp  Wrapper.hpp
src/: CMakeLists.txt  Config.hpp
src/ACC/: CMakeLists.txt  DirectiveTBuf.cpp  Exp.cpp  IStream.cpp  IncludeDTBuf.cpp  Macro.cpp  MacroDTBuf.cpp  PPTokenTBuf.cpp  Parse.cpp  ParseFile.cpp  Pragma.cpp  PropDecl.cpp  Scope.cpp  TSource.cpp  main_acc.cpp
src/AR/: BinaryIO.cpp  CMakeLists.txt  Exception.cpp
src/AS/: CMakeLists.txt  IStream.cpp  LabelTBuf.cpp  Macro.cpp  Parse.cpp  ParseArg.cpp  ParseBlock.cpp  ParseExp.cpp  ParseFile.cpp  ParseStrEnt.cpp  ParseType.cpp  main_as.cpp
src/AST/: Arg.cpp  Attribute.cpp  CMakeLists.txt  Exp.cpp  Function.cpp  Object.cpp  Space.cpp  Statement.cpp  Temporary.cpp  Type.cpp  Warning.cpp
src/Asm/: CMakeLists.txt  IStream.cpp  IStream.hpp  Macro.cpp  Macro.hpp  Parse.cpp  Parse.hpp  ParseArg.cpp  ParseBlock.cpp  ParseExp.cpp  ParseFunction.cpp  ParseImport.cpp  ParseObject.cpp  ParseSpace.cpp  ParseStrEnt.cpp  ParseType.cpp  TStream.hpp  main.cpp
src/BC/: CMakeLists.txt  Info.cpp
src/Bytecode/: CMakeLists.txt  Info.cpp  Info.hpp  Platform.cpp  Platform.hpp
src/C/: CMakeLists.txt  ConcatTBuf.cpp  ConcatTBuf.hpp  ConditionDTBuf.cpp  ConditionDTBuf.hpp  DirectiveTBuf.cpp  DirectiveTBuf.hpp  GetExpIR.cpp  GetExpIR.hpp  IStream.cpp  IStream.hpp  IncludeDTBuf.cpp  IncludeDTBuf.hpp  Macro.cpp  Macro.hpp  MacroDTBuf.cpp  MacroDTBuf.hpp  MacroTBuf.cpp  MacroTBuf.hpp  PPTokenTBuf.cpp  PPTokenTBuf.hpp  Pragma.cpp  Pragma.hpp  PragmaDTBuf.cpp  PragmaDTBuf.hpp  StringTBuf.hpp  TStream.hpp  main.cpp  main_cc.cpp  main_cpp.cpp
src/CC/: AsmGlyphTBuf.cpp  CMakeLists.txt  Exp.cpp  Init.cpp  Parse.cpp  ParseFile.cpp  Scope.cpp  Statement.cpp  Type.cpp  Warning.cpp  main_cc.cpp
src/CPP/: CMakeLists.txt  ConcatTBuf.cpp  ConditionDTBuf.cpp  DirectiveTBuf.cpp  GetExp.cpp  GetExpIR.cpp  IStream.cpp  IncludeDTBuf.cpp  Macro.cpp  MacroDTBuf.cpp  MacroTBuf.cpp  Pragma.cpp  (+5 more)
(+1036 files in other folders)
