##-----------------------------------------------------------------------------
##
## Copyright (C) 2013-2015 David Hill
##
## See COPYING for license information.
##
##-----------------------------------------------------------------------------
##
## CMake file for gdcc targets.
##
##-----------------------------------------------------------------------------


##----------------------------------------------------------------------------|
## Targets                                                                    |
##

add_subdirectory(ACC)
add_subdirectory(AS)
add_subdirectory(AST)
add_subdirectory(Bytecode)
add_subdirectory(CC)
add_subdirectory(CPP)
add_subdirectory(Core)
add_subdirectory(IR)
add_subdirectory(IRDump)
add_subdirectory(LD)
add_subdirectory(MageDefs)
add_subdirectory(Option)
add_subdirectory(Platform)

## EOF

